tests/golden/type_errors/named_struct_unknown_field_assignment.err
Type error at 3:3: struct `Person` has no field `title`
  p.title = "Dr";
    ^
